--- a/index.html
+++ b/index.html
@@ -1,2 +1,40 @@
 <!DOCTYPE html>
-<link href="styles.css" type="text/css" rel="stylesheet">
+<html> 
+
+<head> 
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <a class="header">Discover hidden places in the world around you</a>
+</head>
+
+<section> 
+    <br>
+    <h2 class="dwnld">Download Excursion (Coming soon!)</h2>
+    <figure>
+        <video class="phone" src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" controls>
+        </video> 
+    </figure>
+</section>
+<section> 
+    <br>
+    <h1 class="title">Your personal travel guide</h1>
+</section> 
+<aside>
+    <h2 class="price">Excursion remembers places you like, and recommends new points of interest around you.</h2>
+</aside>
+<section>
+    <figure>
+        <img class="lndscp" src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg">
+    </figure>
+</section>
+<section>
+    <figure>
+        <img class="icon" src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png">
+    </figure>
+</section>
+<aside>
+    <h1 class="title">Coming Soon for iPhone and Android</h1>
+</aside>
+<aside>
+    <h2 class="dwnld">Download Excursion (Coming soon!)</h2>
+</aside>
+</html>
